--- a/src/main/resources/com/example/flashcards/first.fxml
+++ b/src/main/resources/com/example/flashcards/first.fxml
@@ -7,71 +7,70 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.flashcards.FirstController">
-    <children>
-        <Rectangle arcHeight="5.0" arcWidth="5.0" height="400.0" layoutY="1.0" stroke="#090000" strokeType="INSIDE" strokeWidth="0.0" width="600.0">
-            <fill>
-                <LinearGradient endX="1.0" endY="1.0" startX="1.0">
-                    <stops>
-                        <Stop>
-                            <color>
-                                <Color red="0.9803921580314636" green="0.9803921580314636" blue="0.9803921580314636" />
-                            </color>
-                        </Stop>
-                        <Stop offset="0.007633587786259542">
-                            <color>
-                                <Color red="0.9803921580314636" green="0.9803921580314636" blue="0.9803921580314636" />
-                            </color>
-                        </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.5647059082984924" green="0.7803921699523926" blue="0.9725490212440491" />
-                     </color>
-                  </Stop>
-                    </stops>
-                </LinearGradient>
-            </fill>
-        </Rectangle>
-        <Button alignment="CENTER" layoutX="212.0" layoutY="231.0" mnemonicParsing="false" onAction="#showWindow" prefHeight="120.0" prefWidth="175.0" style="-fx-background-color: #fafafa;" text="Линейная&#10;алгебра и&#10;аналитическая&#10;геометрия" textAlignment="CENTER" textFill="#2300af">
-            <font>
-                <Font name="Sitka Small Bold Italic" size="15.0" />
-            </font>
-        </Button>
-        <Button alignment="CENTER" layoutX="14.0" layoutY="231.0" mnemonicParsing="false" onAction="#showWindow" prefHeight="120.0" prefWidth="175.0" style="-fx-background-color: #fafafa;" text="Дискретная&#10;математика&#10;" textAlignment="CENTER" textFill="#2300af">
-            <font>
-                <Font name="Sitka Small Bold Italic" size="15.0" />
-            </font></Button>
-        <Button alignment="CENTER" layoutX="410.0" layoutY="231.0" mnemonicParsing="false" onAction="#showWindow" prefHeight="120.0" prefWidth="175.0" style="-fx-background-color: #fafafa;" text="Математический&#10;анализ" textAlignment="CENTER" textFill="#2300af">
-            <font>
-                <Font name="Sitka Small Bold Italic" size="15.0" />
-            </font>
-        </Button>
-      <Text layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FlashCards" textAlignment="CENTER" wrappingWidth="600.0">
-         <font>
-            <Font name="Sitka Small Bold" size="80.0" />
-         </font>
-         <fill>
-            <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="0.4045800744122221" startX="1.0" startY="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color red="0.13725490868091583" blue="0.686274528503418" />
-                     </color>
-                  </Stop>
-                  <Stop offset="0.4687022900763359">
-                     <color>
-                        <Color red="0.33725491166114807" green="0.5803921818733215" blue="0.7921568751335144" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.5647059082984924" green="0.7803921699523926" blue="0.9725490212440491" />
-                     </color>
-                  </Stop>
-               </stops>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.flashcards.FirstController">
+    <Rectangle arcHeight="5.0" arcWidth="5.0" height="557.0" layoutY="-5.0" stroke="#090000" strokeType="INSIDE" strokeWidth="0.0" width="350.0">
+        <fill>
+            <LinearGradient startX="1.0">
+                <stops>
+                    <Stop>
+                        <color>
+                            <Color red="0.9803921580314636" green="0.9803921580314636" blue="0.9803921580314636" />
+                        </color>
+                    </Stop>
+                    <Stop offset="0.007633587786259542">
+                        <color>
+                            <Color red="0.9803921580314636" green="0.9803921580314636" blue="0.9803921580314636" />
+                        </color>
+                    </Stop>
+                    <Stop offset="1.0">
+                        <color>
+                            <Color red="0.5647059082984924" green="0.7803921699523926" blue="0.9725490212440491" />
+                        </color>
+                    </Stop>
+                </stops>
             </LinearGradient>
-         </fill></Text>
-    </children>
+        </fill>
+    </Rectangle>
+    <Label alignment="TOP_CENTER" layoutX="44.0" layoutY="54.0" text="FlashCards" textAlignment="CENTER">
+        <font>
+            <Font name="Droid Serif Italic" size="44.0" />
+        </font>
+        <textFill>
+            <LinearGradient cycleMethod="REFLECT" endY="0.45801525625563755" startX="1.0" startY="1.0">
+                <stops>
+                    <Stop>
+                        <color>
+                            <Color red="0.13725490868091583" blue="0.686274528503418" />
+                        </color>
+                    </Stop>
+                    <Stop offset="0.007633587786259542">
+                        <color>
+                            <Color red="0.13725490868091583" blue="0.686274528503418" />
+                        </color>
+                    </Stop>
+                    <Stop offset="0.4573094217295828">
+                        <color>
+                            <Color red="0.33725491166114807" green="0.5803921818733215" blue="0.7921568751335144" />
+                        </color>
+                    </Stop>
+                    <Stop offset="0.9961832061068702">
+                        <color>
+                            <Color red="0.5647059082984924" green="0.7803921699523926" blue="0.9725490212440491" />
+                        </color>
+                    </Stop>
+                    <Stop offset="1.0">
+                        <color>
+                            <Color red="0.5647059082984924" green="0.7803921699523926" blue="0.9725490212440491" />
+                        </color>
+                    </Stop>
+                </stops>
+            </LinearGradient>
+        </textFill>
+    </Label>
+    <Button alignment="CENTER" layoutX="78.0" layoutY="305.0" mnemonicParsing="false" onAction="#showWindow" prefHeight="126.0" prefWidth="193.0" style="-fx-background-color: #fafafa;" text="Начать&#10;  градировать&#10;" textAlignment="CENTER" textFill="#2300af">
+        <font>
+            <Font name="Sitka Small Bold Italic" size="15.0" />
+        </font></Button>
     <cursor>
         <Cursor fx:constant="DEFAULT" />
     </cursor>
