--- a/src/main/resources/com/example/flashcards/first.fxml
+++ b/src/main/resources/com/example/flashcards/first.fxml
@@ -31,15 +31,11 @@
             </LinearGradient>
         </fill>
     </Rectangle>
-    <Button alignment="CENTER" layoutX="78.0" layoutY="305.0" mnemonicParsing="false" onAction="#showWindow" prefHeight="126.0" prefWidth="193.0" style="-fx-background-color: #fafafa;" text="Начать&#10;градировать&#10;" textAlignment="CENTER" textFill="#2300af">
+    <Button alignment="CENTER" layoutX="78.0" layoutY="305.0" mnemonicParsing="false" onAction="#showWindow" prefHeight="126.0" prefWidth="193.0" style="-fx-background-color: #fafafa;" text="Начать&#10;градировать&#10;" textAlignment="CENTER">
         <font>
             <Font name="Sitka Small Bold Italic" size="18.0" />
-        </font></Button>
-   <Text layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FlashCards" textAlignment="CENTER" wrappingWidth="350.0">
-      <font>
-         <Font name="Sitka Small Bold" size="50.0" />
-      </font>
-      <fill>
+        </font>
+      <textFill>
          <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="0.5343511377582115" startX="1.0">
             <stops>
                <Stop>
@@ -58,6 +54,41 @@
                   </color>
                </Stop>
                <Stop offset="0.508904109589041">
+                  <color>
+                     <Color red="0.33725491166114807" green="0.5803921818733215" blue="0.7921568751335144" />
+                  </color>
+               </Stop>
+               <Stop offset="1.0">
+                  <color>
+                     <Color red="0.5647059082984924" green="0.7803921699523926" blue="0.9725490212440491" />
+                  </color>
+               </Stop>
+            </stops>
+         </LinearGradient>
+      </textFill></Button>
+   <Text layoutY="100.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FlashCards" textAlignment="CENTER" wrappingWidth="350.0">
+      <font>
+         <Font name="Sitka Small Bold" size="50.0" />
+      </font>
+      <fill>
+         <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="0.2595420211326078" startX="1.0">
+            <stops>
+               <Stop>
+                  <color>
+                     <Color red="0.13725490868091583" blue="0.686274528503418" />
+                  </color>
+               </Stop>
+               <Stop offset="0.007633587786259542">
+                  <color>
+                     <Color red="0.13725490868091583" blue="0.686274528503418" />
+                  </color>
+               </Stop>
+               <Stop offset="0.007633587786259542">
+                  <color>
+                     <Color red="0.13600000739097595" blue="0.6800000071525574" />
+                  </color>
+               </Stop>
+               <Stop offset="0.40203388058140715">
                   <color>
                      <Color red="0.33725491166114807" green="0.5803921818733215" blue="0.7921568751335144" />
                   </color>
